@@ -34,13 +34,16 @@
                     <source>9</source>
                     <target>9</target>
                     <compilerArgs>
-                        <arg>--add-modules=java.xml.bind</arg>
                         <arg>--add-exports=java.base/com.sun.crypto.provider=com.chrosciu.crypto</arg>
-                        <arg>--add-reads=com.chrosciu.model=java.xml.bind</arg>
-                        <arg>--add-reads=com.chrosciu.stacktrace=jdk.unsupported</arg>
-                        <arg>--add-reads=com.chrosciu.user=java.xml.bind</arg>
-                        <arg>--add-reads=com.chrosciu.xml=java.xml.bind</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <forkCount>0</forkCount>
                 </configuration>
             </plugin>
         </plugins>
